RESOLVED FIXED47860
Strict mode: Functions created with the function constructor don't implement strict mode semantics
https://bugs.webkit.org/show_bug.cgi?id=47860
Summary Strict mode: Functions created with the function constructor don't implement ...
Oliver Hunt
Reported 2010-10-18 16:19:46 PDT
Strict mode: Functions created with the function constructor don't implement strict mode semantics
Attachments
Patch (4.24 KB, patch)
2010-10-18 16:21 PDT, Oliver Hunt
sam: review+
Oliver Hunt
Comment 1 2010-10-18 16:21:36 PDT
Oliver Hunt
Comment 2 2010-10-18 16:30:02 PDT
Note You need to log in before you can comment on or make changes to this bug.