2010-10-18  Oliver Hunt  <oliver@apple.com>

Reviewed by Sam Weinig.

        Strict mode: Functions created with the function constructor don't implement strict mode semantics
        https://bugs.webkit.org/show_bug.cgi?id=47860

        When creating the FunctionExecutable for a new function the function constructor
        was always passing false for whether or not a function was strict, rather than
        using the information from the freshly parsed function itself.

        * runtime/Executable.cpp:
        (JSC::FunctionExecutable::fromGlobalCode):
2010-10-18  Oliver Hunt  <oliver@apple.com>

        Reviewed by Sam Weinig.

        Strict mode: Functions created with the function constructor don't implement strict mode semantics
        https://bugs.webkit.org/show_bug.cgi?id=47860

        Test that the function constructor produces correct strict mode functions.

        * fast/js/basic-strict-mode-expected.txt:
        * fast/js/script-tests/basic-strict-mode.js:

Canonical link: https://commits.webkit.org/60573@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70008 268f45cc-cd09-0410-ab3c-d52691b4dbfc